--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyConnect"
         tools:targetApi="31">
-
+        <activity
+            android:name=".CallingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddContactInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContactActivity"
+            android:exported="false" />
         <activity
             android:name=".AddLocationActivity"
             android:exported="false" />
